--- a/resources/public/test/specs.html
+++ b/resources/public/test/specs.html
@@ -12,6 +12,7 @@
 
   <script type="text/javascript" src="sinon/sinon-1.3.1.js"></script>
  
+  <script type="text/javascript" src="../vendor/json2.js"></script>
   <script type="text/javascript" src="../vendor/jquery-1.7.1.min.js"></script>
   <script type="text/javascript" src="../vendor/underscore-min.js"></script>
   <script type="text/javascript" src="../vendor/backbone-min.js"></script>
