--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="/vendor/jquery-dataTables/jquery.dataTables.min.js"></script>
 	<script type="text/javascript" src="/vendor/underscore-min.js"></script>
 	<script type="text/javascript" src="/vendor/backbone-min.js"></script>
+	<script type="text/javascript" src="/js/cars.js"></script>
 	<script type="text/javascript" src="/js/initialize.js"></script>
 </head>
 <body>
