--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,13 +2,13 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="/vendor/jquery-ui/jquery-ui-1.8.17.custom.css"/>
 	<link rel="stylesheet" type="text/css" href="/vendor/jquery-dataTables/css/jquery.dataTables.css"/>
+	<link rel="stylesheet" type="text/css" href="/css/cardealer.css"/>
 	<script type="text/javascript" src="/vendor/json2.js"></script>
 	<script type="text/javascript" src="/vendor/jquery-1.7.1.min.js"></script>
 	<script type="text/javascript" src="/vendor/jquery-ui/jquery-ui-1.8.17.custom.min.js"></script>
 	<script type="text/javascript" src="/vendor/jquery-dataTables/jquery.dataTables.min.js"></script>
 	<script type="text/javascript" src="/vendor/underscore-min.js"></script>
 	<script type="text/javascript" src="/vendor/backbone-min.js"></script>
-	<script type="text/javascript" src="/vendor/backbone.modelbinding.min.js"></script>
 	<script type="text/javascript" src="/js/cars.js"></script>
 	<script type="text/javascript" src="/js/initialize.js"></script>
 </head>
