separate app view

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -14,31 +14,33 @@
 </head>
 <body>
 	<h1>CarDealer</h1>
-	<div id="cars-view">
-		<a href="#" id="add-car-link">Add new car</a>
-		<table id="cars-table">
-			<thead>
-				<tr>
-					<th>Model</th>
-					<th>Licence number </th>
-					<th>Price</th>
-				</tr>
-			</thead>
-		</table>
-		<script id="car-form-template" type="text/template">
-			<div>
-				<label>Model:</label>
-				<input type="text" id="model"/>
-			</div>
-			<div>
-				<label>Licence number:</label>
-				<input type="text" id="licenceNumber"/>
-			</div>
-			<div>
-				<label>Price:</label>
-				<input type="text" id="price"/>
-			</div>
-		</script>	
+	<div id="app-view">
+		<div id="cars-view">
+			<a href="#" id="add-car-link">Add new car</a>
+			<table id="cars-table">
+				<thead>
+					<tr>
+						<th>Model</th>
+						<th>Licence number </th>
+						<th>Price</th>
+					</tr>
+				</thead>
+			</table>
+			<script id="car-form-template" type="text/template">
+				<div>
+					<label>Model:</label>
+					<input type="text" id="model"/>
+				</div>
+				<div>
+					<label>Licence number:</label>
+					<input type="text" id="licenceNumber"/>
+				</div>
+				<div>
+					<label>Price:</label>
+					<input type="text" id="price"/>
+				</div>
+			</script>	
+		</div>
 	</div>
 </body>
 </html>
