--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -15,7 +15,11 @@
 <body>
 	<h1>CarDealer</h1>
 	<div id="app-view">
-		<div id="cars-view">
+		<ul>
+			<li><a href="#cars-view">Cars</a></li>
+			<li><a href="#deals-view">Deals</a></li>
+		</ul>
+		<div id="cars-view" class"tabcontent">
 			<a href="#" id="add-car-link">Add new car</a>
 			<table id="cars-table">
 				<thead>
@@ -40,6 +44,8 @@
 					<input type="text" id="price"/>
 				</div>
 			</script>	
+		</div>
+		<div id="deals-view">
 		</div>
 	</div>
 </body>
