added Make a deal button, created separate CarsTableItemView for table rows

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -19,14 +19,15 @@
 			<li><a href="#cars-view">Cars</a></li>
 			<li><a href="#deals-view">Deals</a></li>
 		</ul>
-		<div id="cars-view" class"tabcontent">
-			<a href="#" id="add-car-link">Add new car</a>
+		<div id="cars-view">
+			<a class="action" href="#" id="add-car-link">Add new car</a>
 			<table id="cars-table">
 				<thead>
 					<tr>
 						<th>Model</th>
 						<th>Licence number </th>
 						<th>Price</th>
+						<th>Actions</th>
 					</tr>
 				</thead>
 			</table>
