added dummy deals view

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -47,7 +47,17 @@
 			</script>	
 		</div>
 		<div id="deals-view">
-		</div>
+			<table id="deals-table">
+				<thead>
+					<tr>
+						<th>Customer</th>
+						<th>Car</th>
+						<th>Price</th>
+						<th>Actions</th>
+					</tr>
+				</thead>
+			</table>
+			</div>
 	</div>
 </body>
 </html>
