changed deals table

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -50,10 +50,9 @@
 			<table id="deals-table">
 				<thead>
 					<tr>
-						<th>Customer</th>
+						<th>Customer name</th>
 						<th>Car</th>
 						<th>Price</th>
-						<th>Actions</th>
 					</tr>
 				</thead>
 			</table>
